<resources>
    <string name="app_name">ToBeOrToHave</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="default_username">Julie Kinney</string>
    <string name="default_email">admin@tobeortohave.fr</string>
    <string name="our_products">Nos produits</string>
    <string name="sponsoring_program">Programme de parrainage</string>
    <string name="our_stores">Nos magasins</string>
    <string name="fidelity_card">Carte de fidelité</string>
    <string name="advantages">Avantages</string>
    <string name="gift_cards">Cartes cadeaux</string>
    <string name="tobeortohavelogo">ToBeOrToHaveLogo</string>
    <string name="home">Accueil</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="connexion">Connexion</string>
    <string name="logo">logo</string>
    <string name="bg">bg</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="news">Actualités</string>
    <string name="title_activity_maps">Map</string>
    <string name="register_link_fr"><u>Pas encore inscrit ? Cliquez ici</u></string>
    <string name="logout_fr">Deconnexion</string>
    <string name="connexion_title">Connexion</string>
    <string name="add_task_button">Ajouter article</string>
    <string name="how_to_share">Partagez ce QRCode ou partagez votre code promotionnel sur les réseaux sociaux et recevez 20pts de fidélité pour chaque ami qui crée un compte ToBeOrToHave grâce à vous !</string>
    <string name="qrdroid_not_found">QRDroid n\'est pas installé sur votre système voulez-vous l\'installer pour profiter de ces fonctionnalités ?</string>
    <string name="qrdroid_alert">QRDroid n\'est pas installé</string>
    <string name="ok">OK</string>
    <string name="cancel">Annuler</string>
    <string name="qrcode_create_title">Combien de points voulez-vous donner ?</string>
</resources>
