<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home"
            android:checked="true"
            />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/news"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/product"
            android:title="@string/our_products" />
        <item
            android:id="@+id/nav_stores"
            android:icon="@drawable/shop"
            android:title="@string/our_stores" />
    </group>

    <item android:title="@string/advantages">
        <menu>
            <item
                android:id="@+id/nav_fidelity_card"
                android:icon="@drawable/fidelity"
                android:title="@string/fidelity_card" />
            <item
                android:id="@+id/nav_sponsoring_program"
                android:icon="@drawable/sponsorship"
                android:title="@string/sponsoring_program" />
            <item
                android:id="@+id/nav_gift_cards"
                android:icon="@drawable/qrcode"
                android:title="@string/gift_cards" />
        </menu>
    </item>

</menu>
