<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.unice.polytech.jcancela.tobeortohave.MainActivity">

    <ImageView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="false"
        android:contentDescription="@string/bg"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/bg" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logoMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/logo"
            android:cropToPadding="false"
            app:srcCompat="@drawable/logo" />

        <Button
            android:id="@+id/connection_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="89dp"

            android:background="@color/tw__composer_blue"
            android:text="@string/connexion" />
    </RelativeLayout>
</FrameLayout>
